smaller UI changes: icons, labels, splash

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -351,6 +351,7 @@ ImportingXMLData=Importing XML (EcoSpold2 format) data
 ImportKMLGeographies=Import KML geographies
 IncludeCostCalculation=Include cost calculation
 IndicatorBarChart=Indicator bar chart
+IndicatorsAndParameters=Indicators and parameters
 IndicatorScore=Indicator score
 Information=Information
 InfrastructureFlow=Infrastructure flow
