--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -351,6 +351,7 @@ ImportingXMLData=Important dades XML (format EcoSpold2)
 ImportKMLGeographies=Importar informaci\u00f3 georgr\u00e0fica en format KML
 IncludeCostCalculation=Incloure c\u00e0lculs de cost
 IndicatorBarChart=Indicador gr\u00e0fic de barres
+IndicatorsAndParameters=Adierazleak eta parametroak
 IndicatorScore=Puntuaci\u00f3 de l'indicador
 Information=Informaci\u00f3
 InfrastructureFlow=Flux d'infraestructura
