--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -351,6 +351,7 @@ ImportingXMLData=XML (EcoSpold2 Format) Daten importieren
 ImportKMLGeographies=KML Geographien importieren
 IncludeCostCalculation=Kostenberechnung ber\u00fccksichtigen
 IndicatorBarChart=Balkendiagramm f\u00fcr Indikatorergebnisse
+IndicatorsAndParameters=Indikatoren und Parameter
 IndicatorScore=Indikatorwert
 Information=Information
 InfrastructureFlow=Infrastruktur-Fluss
