--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -351,6 +351,7 @@ ImportingXMLData=Importando datos XML (formato EcoSpold2)
 ImportKMLGeographies=Importar informaci\u00f3n geogr\u00e1fica en formato KML
 IncludeCostCalculation=Incluir c\u00e1lculos de coste
 IndicatorBarChart=Indicador gr\u00e1fico de barras
+IndicatorsAndParameters=Indicadores y par\u00e1metros
 IndicatorScore=Puntuaci\u00f3n del indicador
 Information=Informaci\u00f3n
 InfrastructureFlow=Flujo de infraestructura
