--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -351,6 +351,7 @@ ImportingXMLData=Importer les donn\u00e9es XML (format EcoSpold2)
 ImportKMLGeographies=importer les g\u00e9ographies KML
 IncludeCostCalculation=Inclure le calcul de co\u00fbt
 IndicatorBarChart=Histogramme des indicateurs
+IndicatorsAndParameters=Indicateurs et param\u00e8tres
 IndicatorScore=Score d'indicateur
 Information=Information
 InfrastructureFlow=Flux de l'infrastructure
