--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -351,6 +351,7 @@ ImportingXMLData=Importo dati in formato XML (formato Eco Spold2)
 ImportKMLGeographies=Importa informazione geografica in formato KML
 IncludeCostCalculation=Includi il calcolo dei costi
 IndicatorBarChart=Grafico dei risultati per singolo indicatore
+IndicatorsAndParameters=Indicatori e parametri
 IndicatorScore=Punteggio dell'indicatore
 Information=Informazioni
 InfrastructureFlow=Flusso di infrastruttura
