--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -351,6 +351,7 @@ ImportingXMLData=Importando dados XML (formato EcoSpold 2)
 ImportKMLGeographies=Importar dados geogr\u00e1ficos em KML
 IncludeCostCalculation=Incluir o c\u00e1lculo de custos
 IndicatorBarChart=Indicador de gr\u00e1fico de barras
+IndicatorsAndParameters=Indicadores e par\u00e2metros
 IndicatorScore=Indicator de pontua\u00e7\u00e3o
 Information=Informa\u00e7\u00e3o
 InfrastructureFlow=Infraestrutura do fluxo
