--- a/olca-app/src/org/openlca/app/messages_tr.properties
+++ b/olca-app/src/org/openlca/app/messages_tr.properties
@@ -336,6 +336,7 @@ ImportingXMLData=XML (EcoSpoe2 format\u0131) verisini i\u00e7e aktar\u0131yor
 ImportKMLGeographies=KML co\u011frafyalar\u0131n\u0131 i\u00e7e aktar
 IncludeCostCalculation=Maliyet hesaplamas\u0131n\u0131 kat
 IndicatorBarChart=G\u00f6sterge sut\u00fcn grafi\u011fi
+IndicatorsAndParameters=G\u00f6stergeler ve parametreler
 IndicatorScore=G\u00f6sterge puan\u0131
 Information=Bilgi
 InfrastructureFlow=Altyap\u0131 ak\u0131\u015f\u0131
@@ -428,8 +429,8 @@ NameCannotBeEmpty=\u0130sim alan\u0131 bo\u015f b\u0131rak\u0131lamaz
 NameEmptyOrAlreadyExists=\u0130sim alan\u0131 bo\u015f ya da verilen isim zaten mevcut
 NameShouldBeDifferent=Verilen isim farkl\u0131 olmal\u0131
 NeedOpenDatabase=Bir veri taban\u0131n\u0131 a\u00e7mal\u0131s\u0131n\u0131z.\u00a0
-Netcosts=Net-maliyetler
 NetCosts=Net maliyetler
+Netcosts=Net-maliyetler
 Never=Asla
 NewActor=Yeni akt\u00f6r
 NewCategory=yeni kategori
