--- a/olca-app/src/org/openlca/app/messages_zh.properties
+++ b/olca-app/src/org/openlca/app/messages_zh.properties
@@ -351,6 +351,7 @@ ImportingXMLData=\u532f\u5165 XML (EcoSpold2\u683c\u5f0f\uff09\u8cc7\u6599
 ImportKMLGeographies=\u532f\u5165 KML \u5ea7\u6a19
 IncludeCostCalculation=\u5f15\u5165\u8cbb\u7528\u8a08\u7b97
 IndicatorBarChart=\u6307\u6a19\u9577\u689d\u5716
+IndicatorsAndParameters=\u6307\u6807\u53ca\u53c2\u6570
 IndicatorScore=\u6307\u6a19\u5206\u6578
 Information=\u8cc7\u8a0a
 InfrastructureFlow=\u57fa\u790e\u6d41\u7a0b
@@ -452,8 +453,8 @@ NameCannotBeEmpty=\u540d\u7a31\u4e0d\u80fd\u7a7a\u767d
 NameEmptyOrAlreadyExists=\u540d\u7a31\u70ba\u7a7a\u767d\u6216\u5df2\u5b58\u5728
 NameShouldBeDifferent=\u540d\u7a31\u5fc5\u9700\u4e0d\u4e00\u6a23
 NeedOpenDatabase=\u958b\u555f\u8cc7\u6599\u5eab
-Netcosts=\u6de8\u6210\u672c
 NetCosts=\u6de8\u6210\u672c
+Netcosts=\u6de8\u6210\u672c
 Never=\u5f9e\u4e0d
 NewActor=\u65b0\u7684\u53c3\u8207\u8005
 NewCategory=\u65b0\u7684\u985e\u5225
