button: create process from flow

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -124,8 +124,8 @@ CreateANewProductFlowForTheProcess=Create a new product flow for the process
 CreateDatabase=Create database
 CreateDefaultValuesForMissingFields=Create default values for missing fields
 CreateNew=Create new
-CreateProcess=create process
-CreateProcesslink=create processlink
+CreateProcess=Create process
+CreateProcesslink=Create process link
 CreateProductSystem=Create product system
 CreatesANewActor=Creates a new actor
 CreatesANewFlow=Creates a new flow
