Refactored some messages

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -18,7 +18,7 @@ AdditionalInformation=Additional information
 Address=Address
 AdministrativeInformation=Administrative information
 Aggregation=Aggregation
-AggregationType=Aggregation type:
+AggregationType=Aggregation type
 Allocation=Allocation
 AllocationFactors=Allocation factors
 AllocationMethod=Allocation method
@@ -216,9 +216,7 @@ DeveloperTools=Developer tools
 Diff=Diff
 Direct=Direct
 DirectContribution=Direct contribution
-DirectContributionsFlowResults=Direct contributions to flow results
 DirectContributionsFlowResultsOverview=Direct contributions to flow results - overview
-DirectContributionsImpactCategoryResults=Direct contributions to impact category results
 DirectContributionsImpactCategoryResultsOverview=Direct contributions to impact category results - overview
 DirectImpact=Direct impact
 Direction=Direction
@@ -247,7 +245,7 @@ ErrorPopupTitle=An unexpected error occured
 Errors=Errors
 EvaluateLocations=Evaluate for existing locations
 EvaluatingLocations=Evaluating locations
-EvaluationScheme=Evaluation scheme
+EvaluationSchema=Evaluation schema
 Example=Example
 ExcelExport=Excel Export
 ExchangeDataQualitySchema=Exchange data quality schema
@@ -297,11 +295,14 @@ Flow=Flow
 FlowCategory=Flow category
 FlowContributions=Flow contributions
 FlowContributionsToProcessResults=Flow contributions to process results
+FlowDataQualitySchema=Flow data quality schema
+FlowDataQualityStatistics=Flow data quality statistics
 FlowProperties=Flow properties
 FlowProperty=Flow property
 FlowPropertyIsUsed=The given flow property is used in processes or impact methods.
 FlowPropertyType=Flow property type
 FlowResults=Flow results
+FlowSchema=Flow schema
 FlowType=Flow type
 Flows=Flows
 Folder=Folder
@@ -351,7 +352,6 @@ ILCD_NetworkImport=Network Import
 ILCD_RunImport=Run Import
 ILCD_SearchFailedMessage=Network search failed: 
 ILCD_SearchPageDescription=Search and select processes for the import
-IOSchema=I/O schema:
 Id=Id
 ImageExport=Image export
 ImpactAnalysis=Impact analysis
@@ -388,9 +388,6 @@ InitializeSimulation=Initialize simulation
 Initializing=Initializing
 Input=Input
 InputOutput=Input/Output
-InputOutputDataQualityScheme=Input/Output data quality scheme
-InputOutputDataQualityStatistics=Input/Output data quality statistics
-InputOutputSchema=Input/Output schema
 InputParameter=Input parameter
 InputParameters=Input parameters
 Inputs=Inputs
@@ -489,7 +486,7 @@ Name=Name
 NameCannotBeEmpty=The name cannot be empty
 NameEmptyOrAlreadyExists=The name is empty or already exists
 NameShouldBeDifferent=The name should be different
-NaValueHandling=n.a. value handling:
+NaValueHandling=n.a. value handling
 NeedOpenDatabase=You need to open a database.
 NetCosts=Net costs
 Netcosts=Net-costs
@@ -553,7 +550,7 @@ NoteDefaultProviders=Note: Default providers of replaced exchanges will be remov
 Notification=Notification
 NumberFormatPage_Description=Set the number of decimal places for the display of numbers.
 NumberOfDecimalPlaces=Number of decimal places
-NumberOfIterations=Number of iterations:
+NumberOfIterations=Number of iterations
 NumberOfSimulations=Number of simulations
 OfProduct=of product
 OK=OK
@@ -606,7 +603,6 @@ ProcessContributionChart=Process contribution chart
 ProcessContributions=Process contributions
 ProcessCosts=Process costs
 ProcessDataQualitySchema=Process data quality schema
-ProcessDataQualityScheme=Process data quality scheme
 ProcessDataQualityStatistics=Process data quality statistics
 ProcessDocumentation=Process documentation
 ProcessEvaluationAndValidation=Process evaluation and validation
@@ -685,7 +681,7 @@ ResultsOf=Results of
 ResultsOfProject=Results of project:
 Reviewer=Reviewer
 RiskLevel=Risk level
-RoundingMode=Rounding mode:
+RoundingMode=Rounding mode
 Route=Route
 RunCalculation=Run calculation
 SamplingProcedure=Sampling procedure
