--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -200,9 +200,7 @@ DeveloperTools=Strumenti per sviluppatori
 Diff=Differenze
 Direct=Diretto
 DirectContribution=Contributo diretto
-DirectContributionsFlowResults=Contributi diretti ai risultati del flusso
 DirectContributionsFlowResultsOverview=Contributi diretti ai risultati del flusso - Riepilogo
-DirectContributionsImpactCategoryResults=Contributi diretti ai risultati della categoria di impatto
 DirectContributionsImpactCategoryResultsOverview=Contributi diretti ai risultati della categoria di impatto - Riepilogo
 DirectImpact=Impatto diretto
 Direction=Direzione
@@ -229,7 +227,7 @@ ErrorPopupMessage=Per ulteriori informazioni vedere il file di log
 ErrorPopupTitle=Si \u00e8 verificato un errore imprevisto
 EvaluateLocations=Valuta per le posizioni esistenti
 EvaluatingLocations=Valutazione delle posizioni
-EvaluationScheme=Schema di valutazione
+EvaluationSchema=Schema di valutazione
 Example=Esempio
 ExcelExport=Esporta in formato Excel
 ExchangesAreUsed=Impossibile eliminare. Uno o pi\u00f9 scambi selezionati sono utilizzati in un sistema di prodotto
