--- a/olca-app/src/org/openlca/app/messages_tr.properties
+++ b/olca-app/src/org/openlca/app/messages_tr.properties
@@ -190,9 +190,7 @@ Description=Tan\u0131m
 DeveloperTools=Geli\u015ftirici ara\u00e7lar\u0131
 Direct=Do\u011frudan
 DirectContribution=Do\u011frudan katk\u0131
-DirectContributionsFlowResults=Ak\u0131\u015f sonu\u00e7lar\u0131na do\u011frudan katk\u0131
 DirectContributionsFlowResultsOverview=Ak\u0131\u015f sonu\u00e7lar\u0131na do\u011frudan katk\u0131 - genel bak\u0131\u015f
-DirectContributionsImpactCategoryResults=Etki kategori sonu\u00e7lar\u0131na do\u011frudan katk\u0131
 DirectContributionsImpactCategoryResultsOverview=Etki kategori sonu\u00e7lar\u0131na do\u011frudan katk\u0131 - genel bak\u0131\u015f
 DirectImpact=Do\u011frudan etki
 Direction=Y\u00f6n
@@ -217,7 +215,7 @@ Error=Hata
 ErrorPopupTitle=Beklenmedik bir hata olu\u015ftu.
 EvaluateLocations=Mevcut konumlar i\u00e7in de\u011ferlendir
 EvaluatingLocations=Konumlar de\u011ferlendiriliyor
-EvaluationScheme=De\u011ferlendirme yap\u0131s\u0131
+EvaluationSchema=De\u011ferlendirme yap\u0131s\u0131
 Example=\u00d6rnek
 ExcelExport=Excel d\u0131\u015fa aktar\u0131m\u0131
 ExchangesAreUsed=De\u011fi\u015fimlerin biri ya da birden fazlas\u0131 \u00fcr\u00fcn sisteminde kullan\u0131mda oldu\u011fu i\u00e7in de\u011fi\u015fim silinemiyor.\u00a0
