--- a/olca-app/src/org/openlca/app/messages_zh.properties
+++ b/olca-app/src/org/openlca/app/messages_zh.properties
@@ -200,9 +200,7 @@ DeveloperTools=\u958b\u767c\u8005\u5de5\u5177
 Diff=\u6bd4\u5c0d
 Direct=\u76f4\u63a5
 DirectContribution=\u76f4\u63a5\u8ca2\u737b
-DirectContributionsFlowResults=\u76f4\u63a5\u8ca2\u737b\u6d41\u7a0b
 DirectContributionsFlowResultsOverview=\u76f4\u63a5\u8ca2\u737b\u6d41\u7a0b-\u6982\u89c0
-DirectContributionsImpactCategoryResults=\u76f4\u63a5\u8ca2\u737b\u5f71\u97ff\u985e\u5225\u7684\u7d50\u679c
 DirectContributionsImpactCategoryResultsOverview=\u76f4\u63a5\u8ca2\u737b\u5f71\u97ff\u985e\u5225\u7684\u7d50\u679c-\u6982\u89c0
 DirectImpact=\u76f4\u63a5\u5f71\u97ff\u8a55\u4f30
 Direction=\u65b9\u5411
@@ -229,7 +227,7 @@ ErrorPopupMessage=\u958b\u555flog\u6a94\u4e86\u89e3\u66f4\u591a\u8cc7\u8a0a
 ErrorPopupTitle=\u767c\u751f\u4f8b\u5916\u7684\u932f\u8aa4
 EvaluateLocations=\u8a55\u5b9a\u4f4d\u7f6e
 EvaluatingLocations=\u8a55\u5b9a\u4f4d\u7f6e
-EvaluationScheme=\u8a55\u5b9a\u683c\u5f0f
+EvaluationSchema=\u8a55\u5b9a\u683c\u5f0f
 Example=\u4f8b\u5b50
 ExcelExport=\u532f\u51fa\u81f3Excel\u6a94
 ExchangesAreUsed=\u9078\u64c7\u7684\u4ea4\u63db\u8cc7\u6599\u5df2\u7d93\u88ab\u4f7f\u7528\u5728\u751f\u7522\u7cfb\u7d71\u4e2d\u7121\u6cd5\u88ab\u522a\u9664
