Refactored Tree/Table creation and fixed minor UI issues

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -132,6 +132,7 @@ CouldNotFindKMLData=Could not find KML data in the file you provided. Is it comp
 CouldNotOpenDatabase=Could not open database
 CouldNotOverwriteFile=Could not overwrite file
 Country=Country
+Coverage=Coverage
 CreateANewDatabase=Create a new database
 CreateANewProductFlowForTheProcess=Create a new product flow for the process
 CreateDatabase=Create database
@@ -376,6 +377,7 @@ ImportKMLGeographies=Import KML geographies
 ImportingKMLData=Importing KML data
 ImportingXMLData=Importing XML (EcoSpold2 format) data
 IncludeCostCalculation=Include cost calculation
+Indicator=Indicator
 IndicatorBarChart=Indicator bar chart
 IndicatorScore=Indicator score
 Indicators=Indicators
@@ -521,6 +523,7 @@ NoChangesInLocalDb=No changes in local db
 NoCostCategorySelected=No cost category selected
 NoData=No data
 NoDatabaseOpened=No database is opened
+NoDataQualitySystemSpecified=-- No data quality system specified --
 NoDescription=No description
 NoDistribution=No distribution
 NoExportFilesSelected=No export files selected
