Added notification in validation view when no errors found

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -189,6 +189,7 @@ DatabaseName=Database name
 DatabaseNeedsUpdate=The given database is newer than this openLCA version.
 DatabaseRenameError=The given name is not a valid or a database with this name already exists.
 DatabaseType=Database type
+DatabaseValidationCompleteNoErrorsWereFound=Database validation complete. No errors were found.
 DatabaseVersionCheckFailed=Could not get the version from the database. Is this an openLCA database?
 DatabaseWasExportedToFile=Database was exported to file
 DecimalSeparator=Decimal separator
