Added title and description to DQ settings page

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -172,6 +172,7 @@ DataDocumentor=Data documentor
 DataGenerator=Data generator
 DataQuality=Data quality
 DataQualityEntry=Data quality entry
+DataQualityProperties=Data quality properties
 DataQualitySystem=Data quality system
 DataQualitySystems=Data quality systems
 DataSelection=Data selection
@@ -591,6 +592,7 @@ PhysicalAndEconomicAllocation=Physical & economic allocation
 PleaseEnterAName=Please enter a name
 PleaseEnterANewName=Please enter a new name
 PleaseEnterTheNameOfTheNewCategory=Please enter the name of the new category:
+PleaseSelectThePropertiesForTheDataQualityAssessment=Please select the properties for the data quality assessment
 PleaseSpecifyHost=Please specify a host
 PleaseSpecifyPortNumber=Please specify a port number
 PleaseSpecifyUser=Please specify a user
