Updated welcome page

--- a/olca-app-html/src/start_page/msg/messages.properties
+++ b/olca-app-html/src/start_page/msg/messages.properties
@@ -15,11 +15,11 @@ manuals.title=Manuals & Case studies
 subtext.first=Professional and powerful Life Cycle Assessments (LCA) and sustainability assessment software.
 subtext.second=Open Source: Licenced under the Mozilla Public Licence 2.0.
 subtext.third=Created and maintained since 2006 by GreenDelta, Berlin
-subtitle=Version 1.5.0 (Windows 64bit)
+subtitle=Version 1.6.0 (Windows 64bit)
 title=Welcome to openLCA!
-whatsNew.bulletpoint1=<strong>Regionalized impact assessment</strong> & improved <strong>Life Cycle Costing</strong>
-whatsNew.bulletpoint2=New and better <strong>structure of database elements</strong> including new icons
-whatsNew.bulletpoint3=Several <strong>smaller improvements and bug fixes</strong>
-whatsNew.description=For the 1.5 version, we restructured the software and implemented new features to make openLCA more user-friendly and even more powerful:
-whatsNew.findOutMore=Find out in more detail what is new in version 1.5 <a href="http://www.openlca.org/news#New_1_5_0">here</a>.
+whatsNew.bulletpoint1=<strong>Data Quality Systems</strong> can be defined to document and calculate the data quality of processes in general, of exchanges and of complete product systems. 
+whatsNew.description=For the 1.6 version, we implemented one major new feature:
+whatsNew.description2=Furthermore, we created a new software: the <strong>openLCA Collaboration server</strong> which provides powerful multi user and data management / versioning capabilities. This is now availabe to use together with openLCA.
+whatsNew.findOutMore=Find out in more detail what is new in version 1.6 <a href="http://openlca.org/index.php/openlca/new1-6/">here</a>.
+whatsNew.findOutMore2=Learn more about the <a href="http://www.openlca.org/index.php/collaboration-server/">openLCA Collaboration server</a> on our new website.
 whatsNew.title=What's new?
