Updated and added some messages

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -25,11 +25,12 @@ AllocationMethod=Allocation method
 AlreadyConnected=Already connected
 AlreadyPresent=Already present
 Amount=Amount
-AnErrorOccuredWhileReceivingDataForCommit=An error occured while receiving data for commit
+AnErrorOccuredWhileReceivingCommitData=An error occurred while receiving commit data
 Analysis=Analysis
 AnalysisResultOf=Analysis result of
 AnalyzingForProblems=Analyzing for problems
 ApplyFormatToInputsOutputs=Apply format to inputs/outputs in process editor
+AreYouSureYouWantToCheckout=Are you sure you want to checkout the selected commit? This action will override your current database state and cannot be undone.
 AsDefinedInProcesses=As defined in processes
 AssessDataQuality=Assess data quality
 AssignUnits=Assign units
@@ -91,7 +92,7 @@ CommitChangesToRepository=Commit changes to repository
 CommitMessage=Commit message
 CommitReferenceNotice=Referenced changes that might be relevant to be committed as well
 CommitingChanges=Commiting changes
-CommittedDate=Committed date
+CommitDate=Commit date
 Committer=Committer
 Compare=Compare
 ComparingWithRepository=Comparing with repository
@@ -448,9 +449,9 @@ ManagePlugins=Manage plugins
 Map=Map
 Mark=Mark
 MarkAsMerged=Mark as merged
-Massreplace=Mass-replace
-MassreplaceFlows=Mass-replace flows
-MassreplaceProviders=Mass-replace providers
+Bulkreplace=Bulk-replace
+BulkreplaceFlows=Bulk-replace flows
+BulkreplaceProviders=Bulk-replace providers
 MatrixExport=Matrix Export
 MatrixFiles=Matrix files
 Maximize=maximize
@@ -784,7 +785,6 @@ Statistics=Statistics
 SubCategory=Sub-category
 SubgroupByProcesses=Subgroup by processes
 Sum=Sum
-Summable=Summable
 Synonyms=Synonyms
 SystemDefinesUncertainties=System defines uncertainties
 SystemProcess=System process
