--- a/olca-app-html/src/start_page/msg/messages.properties
+++ b/olca-app-html/src/start_page/msg/messages.properties
@@ -1,25 +1,16 @@
-community.becomeMember=Become a member of our LinkedIn group
-community.description=An increasing number of people are using openLCA. From universities to corporations to consultancies as well as institutions of every kind and size, from all over the world. Find out more about the openLCA network and its users <a href="http://www.openlca.org/network">here</a>.
-community.followUs=Follow us on Twitter!
-community.note=The source code of openLCA is hosted on <a href="https://github.com/GreenDelta">Github</a>.
-community.title=Community
-gettingStarted.bulletpoint1=Choose a <strong>database</strong> from <a href="https://nexus.openlca.org">openLCA Nexus</a> and import it into openLCA. You can also start with an empty database and create your own data sets.
-gettingStarted.bulletpoint2=Download <strong>impact methods</strong> from the <a href="http://www.openlca.org/downloads">openLCA website</a> and import them into the database.
-gettingStarted.description=For first-time users: To use openLCA, you need to prepare two things:
-gettingStarted.explanatoryVideo=How to import a database and methods into openLCA is shown in this <a href="https://www.youtube.com/watch?v=FqVMbwhAEW4">video</a>.
-gettingStarted.note=Now you have everything to start your LCA study!
+title1=The open source software for sustainability assessment.
+title2=For modeling the life cycle of things.
+title3=Licenced under the Mozilla Public Licence 2.0.
+title4=Created and maintained since 2006 by GreenDelta, Berlin
+whatsNew.title=New in version 1.6
+whatsNew.text=Main changes: A <strong>Data Quality System</strong> documents and calculates data quality of processes, of exchanges and of complete product systems. The <strong>openLCA Collaboration</strong> server provides powerful multi user and data management / versioning capabilities, and integrates now with openLCA. Several usability improvements and bug fixes.
+whatsNew.link=For details, see <a id="news">here</a>.
 gettingStarted.title=Getting started
-manuals.description=Find out more on how to work with openLCA in our <a href="http://www.openlca.org/manuals">user manuals</a>. These illustrate the most basic features and functions as well as offer comprehensive information on more advanced topics. You can also have a look to our <a href="http://www.openlca.org/case_studies">case studies</a> for inspiration on how to model your system.
-manuals.instructionalVideos=See also our <a href="https://www.youtube.com/channel/UCGiahq1YZWK4pRXDVXuIi6w">instructional videos</a> that explain and demonstrate specific subjects.
-manuals.title=Manuals & Case studies
-subtext.first=Professional and powerful Life Cycle Assessments (LCA) and sustainability assessment software.
-subtext.second=Open Source: Licenced under the Mozilla Public Licence 2.0.
-subtext.third=Created and maintained since 2006 by GreenDelta, Berlin
-subtitle=Version 1.6.0 (Windows 64bit)
-title=Welcome to openLCA!
-whatsNew.bulletpoint1=<strong>Data Quality Systems</strong> can be defined to document and calculate the data quality of processes in general, of exchanges and of complete product systems. 
-whatsNew.description=For the 1.6 version, we implemented one major new feature:
-whatsNew.description2=Furthermore, we created a new software: the <strong>openLCA Collaboration server</strong> which provides powerful multi user and data management / versioning capabilities. This is now availabe to use together with openLCA.
-whatsNew.findOutMore=Find out in more detail what is new in version 1.6 <a href="http://openlca.org/index.php/openlca/new1-6/">here</a>.
-whatsNew.findOutMore2=Learn more about the <a href="http://www.openlca.org/index.php/collaboration-server/">openLCA Collaboration server</a> on our new website.
-whatsNew.title=What's new?
+gettingStarted.text=Import or create a new database, and import an LCIA method or method pack. Both are available from <a id="nexus">openLCA Nexus</a>.
+gettingStarted.link=For details, check e.g. <a id="video">this video</a>.
+manuals.title=Manuals and case studies
+manuals.text=Manuals and case studies are available <a id="manuals">here</a>, if you are looking for some examples.
+manuals.link=We'd also like to recommend our <a id="channel">YouTube channel</a>.
+community.title=Community
+community.text=openLCA is created by <a id="greendelta">GreenDelta</a>, but a community has established, with international partners in various countries, and thousands of users. 
+community.link=Check, and we recommend use, the <a id="forum">forum</a>, and join and become active in our <a id="linkedin">LinkedIn group</a>.
