Added option to apply external database update (patch)

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -30,6 +30,7 @@ Analysis=Analysis
 AnalysisResultOf=Analysis result of
 AnalyzingForProblems=Analyzing for problems
 ApplyFormatToInputsOutputs=Apply format to inputs/outputs in process editor
+ApplyingDatabaseUpdates=Applying database updates
 AreYouSureYouWantToCheckout=Are you sure you want to checkout the selected commit? This action will override your current database state and cannot be undone.
 AsDefinedInProcesses=As defined in processes
 AssessDataQuality=Assess data quality
@@ -41,6 +42,7 @@ AvoidedWasteFlow=Avoided waste flow
 BackgroundData=Background data
 BaseUncertainty=Base uncertainty
 Browse=Browse
+BrowseLocalFiles=Browse local files...
 BrowserConfiguration=Browser configuration
 BuildNextTier=Build next tier
 BuildSupplyChain=Build supply chain
@@ -339,6 +341,7 @@ HalfUp=Half up
 HasUncertainties=Has uncertainties
 Help=&Help
 Hide=Hide
+HideExecutedUpdates=Hide executed updates
 HighOpportunity=High opportunity
 HighRisk=High risk
 Home=Home
@@ -570,6 +573,7 @@ OpenLCAUpdateCheck=openLCA update check
 OpenLogFile=Open log file
 OpenMiniatureView=Open miniature view
 OpenPluginManager=Opens the openLCA Plugin Manager
+OpenUpdateManager=Open Update Manager
 Other=Other
 OutOfMemory=Out of memory
 Output=Output
@@ -752,6 +756,7 @@ ShareDescription=Specify the user you want to share the repository with
 ShareRepository=Share repository
 SharingRepository=Sharing repository
 Show=show
+ShowExecutedUpdates=Show executed updates
 ShowFormulas=Show formulas
 ShowInHistory=Show in history
 ShowInMap=Show in map
@@ -843,6 +848,7 @@ UpdateMajorVersion=Update major version
 UpdateMinorVersion=Update minor version
 UpdatePreferences=Update preferences
 UpdateReferenceCurrency=Update reference currency...
+UpdateWasAlreadyAddedOrExecuted=Update was already added or executed
 UpdatingProductSystem=Updating product system
 UpstreamInclDirect=Upstream incl. direct
 UpstreamTotal=Upstream total
