--- a/olca-app-html/src/start_page/msg/messages.properties
+++ b/olca-app-html/src/start_page/msg/messages.properties
@@ -3,7 +3,7 @@ title2=For modeling the life cycle of things.
 title3=Licenced under the Mozilla Public Licence 2.0.
 title4=Created and maintained since 2006 by GreenDelta, Berlin
 whatsNew.title=New in version 1.6
-whatsNew.text=Main changes: A <strong>Data Quality System</strong> documents and calculates data quality of processes, of exchanges and of complete product systems. The <strong>openLCA Collaboration</strong> server provides powerful multi user and data management / versioning capabilities, and integrates now with openLCA. Several usability improvements and bug fixes.
+whatsNew.text=Main changes: A <strong>Data Quality System</strong> documents and calculates data quality of processes, of exchanges and of complete product systems. The <strong>openLCA Collaboration Server</strong> provides powerful multi user and data management / versioning capabilities, and integrates now with openLCA. Several usability improvements and bug fixes.
 whatsNew.link=For details, see <a id="news">here</a>.
 gettingStarted.title=Getting started
 gettingStarted.text=Import or create a new database, and import an LCIA method or method pack. Both are available from <a id="nexus">openLCA Nexus</a>.
